--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-T4GWKRT7N7');
+  gtag('config', 'G-T4GWKRT7N7', {
+    send_page_view: false
+  });
 </script>
   <body>
     <div id="root"></div>
