--- a/index.html
+++ b/index.html
@@ -7,17 +7,19 @@
     <title>리버스 체스</title>
   </head>
   <!-- index.html -->
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-T4GWKRT7N7"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-T4GWKRT7N7"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
 
-  gtag('config', 'G-T4GWKRT7N7', {
-    send_page_view: false
-  });
-</script>
+    gtag('config', 'G-T4GWKRT7N7', {
+      send_page_view: false,
+    });
+  </script>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
